--- a/trevette-react-app/src/css/App.scss
+++ b/trevette-react-app/src/css/App.scss
@@ -129,7 +129,7 @@ h1,h2 { font-family: $title; }
         }
 
         &--technical {
-            .title { margin-top: .5rem; }
+            .title { margin-top: 1rem; }
 
             .box {
                 display: flex;
@@ -152,10 +152,14 @@ h1,h2 { font-family: $title; }
                         margin-bottom: 0; 
                     }
                     flex: 1;
-                    border-bottom: 1px solid #a3a3a1;
                     display: flex;
                     justify-content: space-between;
                     padding-bottom: .15rem;
+                    border-bottom: 1px solid #a3a3a1;
+
+                    &__noborder {
+                        border-bottom: 0;
+                    }
 
                     .left {
                         .fa, .fas { margin-right: .5rem; }
@@ -165,12 +169,12 @@ h1,h2 { font-family: $title; }
                         span { color: #232123; }
                     }
 
-                    &:last-of-type {
-                        margin-right: 0;
-                        @media screen and (min-width: 1200px) {
-                            margin-left: .5rem;
-                        }
-                    }
+                    // &--push-left {
+                    //     margin-right: 0;
+                    //     @media screen and (min-width: 1200px) {
+                    //         margin-left: .5rem;
+                    //     }
+                    // }
                 }
             }
         }
