la till conditional render på sales info

--- a/trevette-react-app/src/css/App.css
+++ b/trevette-react-app/src/css/App.css
@@ -135,34 +135,37 @@ h1, h2 {
   padding: 2rem;
 }
 
-.object__info--basic {
+.object__info--salesinfo {
   margin-bottom: 2rem;
 }
 
-.object__info--basic .flavor-title {
+.object__info--salesinfo .flavor-title {
   margin-top: .5rem;
 }
 
-.object__info--basic button {
+.object__info--salesinfo button {
+  padding: .75rem 0;
   font-family: "Oswald", sans-serif;
   -webkit-box-shadow: 0 0.375em 0 #FFD647;
           box-shadow: 0 0.375em 0 #FFD647;
   border: 0.125rem solid #FFD647;
+  background-color: rgba(255, 214, 71, 0.2);
 }
 
-.object__info--basic button:hover {
+.object__info--salesinfo button:hover {
+  background-color: rgba(255, 214, 71, 0.35);
   -webkit-box-shadow: 0 0.375em 0 #faa230;
           box-shadow: 0 0.375em 0 #faa230;
   border: 0.125rem solid #faa230;
 }
 
-.object__info--basic .badge {
+.object__info--salesinfo .badge {
   font-size: 90%;
   margin-right: .5rem;
   padding: .35rem .6rem;
 }
 
-.object__info--basic .price {
+.object__info--salesinfo .price {
   color: #555451;
   text-align: center;
   margin-top: .5rem;
@@ -225,6 +228,7 @@ h1, h2 {
 
 .object__info--technical .box .module .left .fa, .object__info--technical .box .module .left .fas {
   margin-right: .5rem;
+  color: #a66004;
 }
 
 .object__info--technical .box .module .right span {
