--- a/trevette-react-app/src/components/Pages/Dashboard/dashboard.css
+++ b/trevette-react-app/src/components/Pages/Dashboard/dashboard.css
@@ -5,4 +5,14 @@
           box-shadow: 0px 2px 5px rgba(85, 84, 81, 0.25);
   padding: 1rem;
 }
+
+.dashboard__module {
+  width: 100%;
+  background: white;
+}
+
+.dashboard__breadcrumbs {
+  font-size: 90%;
+  margin-bottom: 1rem;
+}
 /*# sourceMappingURL=dashboard.css.map */
