--- a/trevette-react-app/src/components/Pages/Dashboard/dashboard.css
+++ b/trevette-react-app/src/components/Pages/Dashboard/dashboard.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap");
 .dashboard__menu {
   background-color: #fff;
   border-radius: 5px;
