--- a/trevette-react-app/src/components/Pages/Dashboard/dashboard.scss
+++ b/trevette-react-app/src/components/Pages/Dashboard/dashboard.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap');
+
+$sans: 'Montserrat', sans-serif;
+$title: 'Oswald', sans-serif;
+
 $yellow: #FFD647;
 $orange: #faa230;
 
